Added button to add gifs

--- a/index.html
+++ b/index.html
@@ -23,16 +23,25 @@
 		</div>
 
 		<div class="row">
-			<div id="gifsHere" class="col-md-8">
-
+			<div id="giphsHere" class="col-md-9">
+				
 			</div>
 
-			<div id="inputsHere" class="col-md-4">
+			<div id="inputsHere" class="col-md-3">
+				<form id="giphForm">
+					<label>Add a Team</label>
+					<br>
+					<input id="newTeam" type="text" name="team">
+					<br>
+					<label>Show number of giphs</label>
+					<br>
+					<input id="newLimit" type="text" name="limit">
+					<br>
+					<button id="teamButton">Submit</button>
+				</form>
 				
 			</div>
 		</div>
-
-
 
 	</div>
 
